--- a/styles/password_recover.css
+++ b/styles/password_recover.css
@@ -22,13 +22,11 @@ main {
 
 a { text-decoration: none; font-size: small; }
 h1 { margin: 20px 0; }
-h2{ font-family: Oxanium; color: #1c044d; font-size: 30px;}
-ul { list-style: none; }
+h2{ font-family: Oxanium; color: #1c044d; font-size: 35px;}
 
 /**
  * Flex rules
  */
-
 .flex {
     display: -webkit-box;
     display: -moz-box;
@@ -69,9 +67,7 @@ ul { list-style: none; }
     flex-wrap: wrap;
 }
 
-/**
- *
- */
+/*------------------------------------------*/
 
 .panel {
     margin-bottom: 10px;
@@ -91,16 +87,9 @@ ul { list-style: none; }
     height: 618px;
 }
 
-/**
- * Login section
- */
-.login-with-fb,
-form { width: 100%; }
+/*Login*/
 
-.register,
-form { padding: 30px 20px; }
-
-.login-with-fb { padding: 30px 20px 20px 20px; }
+form { padding: 30px 20px; width: 100%; }
 
 form .sr-only { display: none; }
 
@@ -135,20 +124,147 @@ form input:focus {
 }
 
 /**
- * Separator login form from login with fb
+ * Media queries
  */
-.separator span {
-    background-color: #dbdbdb;
-    height: 1px;
-    width: calc(100% - 10px);
+
+@media screen and (max-width: 767px) {
+    main { margin: 30px auto 50px auto; }
+    footer .copyright,
+    footer ul li a { font-size: 13px; }
 }
 
-.separator .or {
-    color: #808080;
+@import url('https://fonts.googleapis.com/css2?family=Oxanium:wght@200..800&display=swap');   
+
+* {
+    border: none;
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    background-color: #D9AFD9;
+    background-image: linear-gradient(0deg, #D9AFD9 0%, #9977dd 50%, #008e8c 100%);    
+    height: 100vh;
+}
+
+main {
+    height: 100vh;
+    margin: auto;
+    max-width: 935px;
+}
+
+a { text-decoration: none; font-size: small; }
+h1 { margin: 20px 0; }
+h2{ font-family: Oxanium; color: #1c044d; font-size: 35px;}
+
+/**
+ * Flex rules
+ */
+.flex {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+}
+
+.direction-column {
+    -webkit-box-direction: normal;
+    -webkit-box-orient: vertical;
+    -moz-box-direction: normal;
+    -moz-box-orient: vertical;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+}
+
+.justify-content-center {
+    -webkit-box-pack: center;
+    -moz-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+}
+
+.align-items-center {
+    -webkit-box-align: center;
+    -moz-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+}
+
+.flex-wrap {
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+}
+
+/*------------------------------------------*/
+
+.panel {
+    margin-bottom: 10px;
+    padding: 10px;
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(6.1px);
+    -webkit-backdrop-filter: blur(6.1px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+#auth { max-width: 350px; }
+#mobile { max-width: 454px; }
+
+#mobile img {
+    height: 618px;
+}
+
+/*Login*/
+
+form { padding: 30px 20px; width: 100%; }
+
+form .sr-only { display: none; }
+
+form input {
+    background-color: #fafafa;
+    border: 1px solid #dbdbdb;
+    border-radius: 3px;
+    color: #03000a;
+    margin-bottom: 8px;
+    padding: 10px 10px;
+    width: 100%;
+}
+
+form input::placeholder {
+    color: #2d095c;
+}
+
+form input:focus {
+    border: 1px solid #808080;
+    outline: none;
+}
+
+.btnLogin {
+    background-color: #140592;
+    border-radius: 15px;
+    color: #fff;
     font-weight: bold;
+    height: 35px;
+    margin-top: 10px;
+    width: 100%;
+    border: none;
 }
 
-.separator { padding: 0 20px; }
-.separator span:first-child { margin-right: 10px;}
-.separator span:last-child { margin-left: 10px;}
+/**
+ * Media queries
+ */
+
+@media screen and (max-width: 767px) {
+    main { margin: 30px auto 50px auto; }
+    footer .copyright,
+    footer ul li a { font-size: 13px; }
+}
 
