--- a/frontend/styles/contentPosting.css
+++ b/frontend/styles/contentPosting.css
@@ -39,7 +39,7 @@ li {
 
 /*body*/
 body {
-    background-color: #D9AFD9;
+    background-color: var(--body-bg-color);
     height: 100vh;
     width: 100vw; 
     font-family: 'Poppins', sans-serif;
