--- a/frontend/styles/login.css
+++ b/frontend/styles/login.css
@@ -9,10 +9,28 @@
 }
 
 body {
-    background-color: #D9AFD9;
-    background-image: linear-gradient(0deg, #D9AFD9 0%, #9977dd 50%, #008e8c 100%);    
-    height: 100vh;
+        width: 100vw;
+        height: 100vh;
+        background: linear-gradient(
+          135deg,
+          hsl(170deg, 80%, 70%),
+          hsl(190deg, 80%, 70%),
+          hsl(250deg, 80%, 70%),
+          hsl(320deg, 80%, 70%)
+        );
+        background-size: 200% 200%;
+        animation: gradient-move 15s ease alternate infinite;
+        box-sizing: unset;
 }
+
+@keyframes gradient-move {
+    0% {
+      background-position: 0% 0%;
+    }
+    100% {
+      background-position: 100% 100%;
+    }
+  }
 
 main {
     height: 100vh;
@@ -78,6 +96,7 @@ h2{ font-family: Oxanium; color: #1c044d; font-size: 35px;}
     backdrop-filter: blur(6.1px);
     -webkit-backdrop-filter: blur(6.1px);
     border: 1px solid rgba(255, 255, 255, 0.3);
+    box-sizing: border-box;
 }
 
 #auth { max-width: 350px; }
