--- a/frontend/styles/password_recover.css
+++ b/frontend/styles/password_recover.css
@@ -9,11 +9,28 @@
 }
 
 body {
-    background-color: #D9AFD9;
-    background-image: linear-gradient(0deg, #D9AFD9 0%, #9977dd 50%, #008e8c 100%);    
+    width: 100vw;
     height: 100vh;
+    background: linear-gradient(
+      135deg,
+      hsl(170deg, 80%, 70%),
+      hsl(190deg, 80%, 70%),
+      hsl(250deg, 80%, 70%),
+      hsl(320deg, 80%, 70%)
+    );
+    background-size: 200% 200%;
+    animation: gradient-move 15s ease alternate infinite;
+    box-sizing: unset;
 }
 
+@keyframes gradient-move {
+0% {
+  background-position: 0% 0%;
+}
+100% {
+  background-position: 100% 100%;
+}
+}
 main {
     height: 100vh;
     margin: auto;
