--- a/frontend/styles/login.css
+++ b/frontend/styles/login.css
@@ -33,7 +33,7 @@ body {
   }
 
 main {
-    height: 100vh;
+    height: 100vh;  
     margin: auto;
     max-width: 935px;
 }
@@ -41,6 +41,9 @@ main {
 a { text-decoration: none; font-size: small; }
 h1 { margin: 20px 0; }
 h2{ font-family: Oxanium; color: #1c044d; font-size: 35px;}
+h5{
+    color: red;
+}
 
 /**
  * Flex rules
