--- a/frontend/styles/contentPosting.css
+++ b/frontend/styles/contentPosting.css
@@ -291,6 +291,33 @@ body {
         font-size: 1.7rem;
     }
 }  
+.edit-button {
+
+    background-color: #333;
+
+    color: #fff;
+
+    border: none;
+
+    padding: 5px 10px;
+
+    border-radius: 5px;
+
+    cursor: pointer;
+
+    margin-left: 10px;
+    position: relative;
+    
+    margin-top: 10px;
+
+}
+
+
+.edit-button:hover {
+
+    background-color: #444;
+
+}
 
 .profile-container {
 
